Build a fraction tab: Fixed: Initial fraction skeleton should animate to toolbox location if dropped in toolbox, not back to the middle of the screen
Build a fraction tab: Show filled in fractions on a "card", have the card disappear when it drops in the scoring cell
Build a fraction tab: Made target cells a little smaller
Build a fraction tab: Made scoring cells have the same shade of gray as the toolbox
Build a fraction tab: Added a "split" button to completed fractions that appear in the scoring cells
Build a fraction tab: Fixed: Cards should go over (z-order) the target fraction red dotted line
Build a fraction tab: Removed card background when a card is dropped into a fraction
Build a fraction tab: Fixed: Fractions should pop out if put in a non-matching target cell
Build a fraction tab: Added fraction skeleton to the toolbox, and animate it out when the user solves a target (and doesn't already have another fraction skeleton in the play area)
Build a fraction tab: Fixed: When navigating back a level, it should remember if you solved the level and not create the level anew
Build a fraction tab: Fixed: Level text should accommodate double digits level size
Build a fraction tab: Fixed: Level numbering should start at 1, not zero
Build a fraction tab: Removed "0" from levels
Build a fraction tab: Sort numbers in the toolbox
Build a fraction tab: Added a level indicator and navigation buttons
Build a fraction tab: Space out numbers equally in the toolbox
Build a fraction tab: Added stacks of cards for the numbers
Build a fraction tab: Remove confirmation dialog for reset all
Build a fraction tab: Fade out previous level when going to next level to support other aspect ratios
Build a fraction tab: Added bucket icon
Build a fraction tab: Added pieces in the bucket
Build a fraction tab: Added enable/disable for bucket spinner buttons
Build a fraction tab: Added bucket spinner buttons
# 0.00.80 (64782) Jun 7, 2012